--- a/app/routes/development/View.html
+++ b/app/routes/development/View.html
@@ -1,29 +1,39 @@
 <div style="margin:auto;">
-	<md-card flex style="position:relative;padding-bottom:3em;">
-		<div layout-padding>
-			<div layout layout-sm="column">
+	<style>
+		.calc{
+			width: 310px;
+			float: left;
+		}
+		.chart{
+			width: calc(100% - 350px);
+			float: right;
+		}
+		@media screen and (max-width: 600px) {
+		.calc, .chart{
+			width: 100%;
+			float: none;
+		}
+	}
+	</style>
+	<md-card style="position:relative;padding-bottom:3.5em;" class="calc" layout-padding>
+		<div>
+			<div layout="row">
 				<md-input-container flex>
 					<label>From</label>
 					<input ng-model="development.from" type="number" min="2000" max="2100">
 				</md-input-container>
 				<md-input-container flex>
 					<label>To</label>
-					<input ng-model="development.to" type="number" min="2000" max="2100">
+					<input ng-model="development.to" type="number" min="2000" max="2100" style="text-align: right;">
 				</md-input-container>
-			</div>
-		</div>
-		<div style="padding:2em;padding-top:0em;">
-			<div>
-				<bp-chart-wrapper legend="true" options="options" colors="colors" chart-type="Bar" create-data="budgetTotals" watch="development"></bp-chart-wrapper>
 			</div>
 		</div>
 		<md-card-content>
 			<div sv-root>
 				<div ng-repeat="element in development.elements" sv-part="development.elements">
-					<div sv-element layout="row" style="height: 2.5em;">
+					<div sv-element layout="row" >
 						<select flex=60 class="hide-border" ng-model="element.budget" ng-options="budgets.indexOf(item) as item.name for item in budgets"></select>
-						<input flex=30 class="hide-border" ng-model="element.year" type="number" min="{{development.elements[$index-1].year + 1}}"
-						/>
+						<input flex=30 class="hide-border" ng-model="element.year" type="number" />
 						<button ng-click="development.elements.remove(element)" class="md-icon-button md-button md-ink-ripple" type="button">
 							<ng-md-icon icon="delete" style="fill:#666" size=24></ng-md-icon>
 						</button>
@@ -32,7 +42,14 @@
 			</div>
 		</md-card-content>
 		<md-button ng-click="development.elements.add()" class="md-fab md-primary" style="position:absolute;bottom:0;right:0" aria-label="Add">
-			<ng-md-icon icon="add" style="fill:white" size=40></ng-md-icon>
+			<ng-md-icon icon="add" fill="white" style="width: 40px;height: 40px;" size="40"></ng-md-icon>
 		</md-button>
+	</md-card>
+	<md-card class="chart">
+		<div style="padding:2em;">
+			<div>
+				<bp-chart-wrapper legend="true" options="options" colors="colors" chart-type="Bar" create-data="budgetTotals" watch="development"></bp-chart-wrapper>
+			</div>
+		</div>
 	</md-card>
 </div>
