pdf charts added

--- a/app/index.html
+++ b/app/index.html
@@ -96,5 +96,6 @@
         </div>
     </div>
     <script src="js/app.js"></script>
+    <canvas id="canvas" style="width:1000px; height:500px; background-color:red;"></canvas>			
 </body>
 </html>
