--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,13 @@
 </head>
 
 <body>
-    <div ng-app="app" id="content-wrapper" ng-csp>
-        <section layout="row" flex ng-controller="AppController">
-
-            <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
+    <div ng-app="app" ng-csp style="height:100vh">
+        <div ng-controller="AppController" layout="row" id="content-wrapper">
+            <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="false" flex>
                 <!-- md-is-locked-open="$mdMedia('gt-md')">-->
-                <div style="background-size: cover; ;height:9em;padding:1em 1em; background-image:url('./images/wallpaper.png')">
-                    <img src="images/logo.png" style="height:8em;width:8em; margin: 1em 1em 1em 0;" />
-                    <!--style="border-radius:100%;height:4em;width:4em; margin: 1em 1em 1em 0;" />-->
-                    <p style="color:white;font-weight:bold;">hansueli.burri@gmail.com</p>
+                <div style="background-size: cover; height:9em;padding:1em 1em; background:url('./images/wallpaper.png') rgb(33,150,243);">
+                    <img src="images/logo.png" style="height:6em;width:6em; margin-left: 97px;" />
+                    <span style="color: white;display: block;text-align: center;font-size: 1.5em;margin: 1em;font-weight: bold;">Budget Planner 2.0</span>
                 </div>
                 <md-content>
                     <md-menu-content>
@@ -28,9 +26,8 @@
                     </md-menu-content>
                 </md-content>
             </md-sidenav>
-
-            <md-content flex class="page">
-                <md-toolbar class="main-toolbar">
+            <div style="height:100vh; overflow:hidden" flex>
+                <md-toolbar md-scroll-shrink="" class="main-toolbar">
                     <div class="md-toolbar-tools">
                         <md-button aria-label="menu" class="md-icon-button" ng-click="toggleSideNav()">
                             <ng-md-icon icon="menu" style="fill:white;"></ng-md-icon>
@@ -75,27 +72,29 @@
                         </md-button>
                     </div>
                 </md-toolbar>
-                <div layout-padding>
-                    <div ng-view></div>
-                </div>
-            </md-content>
-        </section>
-    </div>
-    <div id="loader-wrapper">
-        <div class="loader-bookshelf_wrapper">
-            <ul class="loader-books_list">
-                <li class="loader-book_item loader-first"></li>
-                <li class="loader-book_item loader-second"></li>
-                <li class="loader-book_item loader-third"></li>
-                <li class="loader-book_item loader-fourth"></li>
-                <li class="loader-book_item loader-fifth"></li>
-                <li class="loader-book_item loader-sixth"></li>
-            </ul>
-            <div class="loader-shelf"></div>
-            <h1 class="loader-text">Budget Planner 2.0</h1>
+
+                <md-content style="height:100%">
+                    <div ng-view style="padding:0;"></div>
+                </md-content>
+            </div>
         </div>
+        <div id="loader-wrapper">
+            <div class="loader-bookshelf_wrapper">
+                <ul class="loader-books_list">
+                    <li class="loader-book_item loader-first"></li>
+                    <li class="loader-book_item loader-second"></li>
+                    <li class="loader-book_item loader-third"></li>
+                    <li class="loader-book_item loader-fourth"></li>
+                    <li class="loader-book_item loader-fifth"></li>
+                    <li class="loader-book_item loader-sixth"></li>
+                </ul>
+                <div class="loader-shelf"></div>
+                <h1 class="loader-text">Budget Planner 2.0</h1>
+            </div>
+        </div>
+        <script src="js/app.js"></script>
     </div>
-    <script src="js/app.js"></script>
-    <canvas id="canvas" style="width:1000px; height:500px; background-color:red;"></canvas>			
+    <canvas id="canvas" style="width:1000px; height:500px;position: absolute;top: 0;left: -1000px;"></canvas>
 </body>
+
 </html>
