--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
         </div>
         <script src="js/app.js"></script>
     </div>
-    <canvas id="canvas" style="width:1000px; height:500px;position: absolute;top: 0;left: -1000px;"></canvas>
+    <canvas id="canvas" style="width:1000px; height:500px;position: absolute;top: 0;left: -1000px;background-color:white"></canvas>
 </body>
 
 </html>
