--- a/app/routes/budget/View.html
+++ b/app/routes/budget/View.html
@@ -1,4 +1,4 @@
-<div style="max-width:1200px;margin:auto;">
+<div style="max-width:1200px;margin:auto;padding:2em;">
 	<bp-budget-switcher style="margin-bottom:1em;"></bp-budget-switcher>
 	<div layout-gt-xs="row">
 		<bp-unit-card name="'INCOME' | translate" color="green" unit-name="positiv" unit-type="budgets" flex-gt-xs></bp-unit-card>
